--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ matrix:
     - {python: 3.7-dev, env: TOXENV=py37-sa1.2.18}
     - {python: 3.7-dev, env: TOXENV=py37-sa1.3.0}
     - {python: 3.7-dev, env: TOXENV=py37-sa1.3.1}
+    - {python: 3.7-dev, env: TOXENV=py37-sa1.3.2}
 
 install:
   - pip install tox
