--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist=
     py{27,34,35,36,37}-sa-latest,
     py37-sa1.2.{0,1,2,3,4,5,6,7,8,10,11,12,13,14,15,16,17,18}
-    py37-sa1.3.{0,1}
+    py37-sa1.3.{0,1,2}
 #Unsupported: pypy,pypy3
 skip_missing_interpreters=True
 
@@ -29,6 +29,7 @@ deps=
     py37-sa1.2.18: sqlalchemy==1.2.18
     py37-sa1.3.0: sqlalchemy==1.3.0
     py37-sa1.3.1: sqlalchemy==1.3.1
+    py37-sa1.3.2: sqlalchemy==1.3.2
 commands=
     nosetests {posargs:tests/}
 whitelist_externals=make
